Fix job opt dark mode colors
Adjusts warning and danger background colors in dark theme for contrast

--- a/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/_theme.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/_theme.scss
@@ -430,11 +430,11 @@ $black:                      $grey-900;
 
     --warning-color:              var(--orange-500);
     --warning-states-color:       var(--orange-700);
-    --warning-bg-color:           var(--orange-100);
+    --warning-bg-color:           var(--orange-300);
 
     --danger-color:               var(--red-500);
     --danger-states-color:        var(--red-400);
-    --danger-bg-color:            var(--red-100);
+    --danger-bg-color:            var(--red-300);
 
     // Typography
     --font-color:                 var(--white);
