--- a/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/paper/_collapse.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/paper/_collapse.scss
@@ -3,7 +3,7 @@
 }
 
 .el-collapse-item {
-  background-color: var(--smoke-bg);
+  background-color: var(--background-color-lvl3);
   border-radius: $border-radius-small;
   font-size: $font-size-base;
   font-weight: $font-weight-light;
@@ -14,13 +14,13 @@
 }
 
 .el-collapse-item__wrap {
-  background-color: var(--smoke-bg);
+  background-color: var(--background-color-lvl3);
   border-bottom: none !important;
 }
 
 .el-collapse-item {
   .el-collapse-item__header {
-    background-color: var(--smoke-bg);
+    background-color: var(--background-color-lvl3);
     border: 0 none;
     border-radius: $border-radius-small;
     font-weight: bold;
@@ -35,7 +35,7 @@
   }
 
   .el-collapse-item__content {
-    background-color: var(--smoke-bg);
+    background-color: var(--background-color-lvl3);
     border: none;
     box-shadow: none;
   }
